# contrastive-product-matching

./: pyproject.toml  requirements.txt
contrastive_product_matching/contrastive/: run_pretraining_deepmatcher.py
contrastive_product_matching/processing/preprocess/: preprocess_ts_gs.py
src/contrastive/: run_finetune_siamese.py  run_pretraining.py  run_pretraining_deepmatcher_nosplit.py  run_pretraining_ssv.py
src/contrastive/models/: modeling.py
src/processing/preprocess/: preprocess_corpus.py
