[tool.poetry]
name = "contrastive-product-matching"
version = "0.1.0"
description = "Data Integration Research"
authors = ["Ralph Peeters"]

packages = [
  {include = "contrastive_product_matching"}
]

[tool.poetry.dependencies]
python = "^3.9"
nlpaug = "^1.1.11"
nltk = "^3.8.1"
numpy = "^1.24.1"
pandas = "^1.5.3"
ray = "^2.3.0"
requests = "^2.28.2"
scikit_learn = "^1.2.2"
torch = "^2.0.0"
transformers = "^4.27.1"


[tool.poetry.dev-dependencies]
black = "^23.1.0"
flake8 = "^6.0.0"
mypy = "^1.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
